--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -886,18 +886,21 @@ All papers that conform to submission guidelines will be evaluated based on orig
     <ul class="nospace group btmspace-80">
       <li class="one_third first">
         <blockquote>
-        <h5>Track I: <!---Security And Privacy--> </h5>
-       <!--- <ul>
-         <li>Cryptography </li>
-         <li>Cryptology</li>
-         <li>Digital Watermarking</li>
-         <li>Cyber Security</li>
+        <h5>Track I: Next-Generation Wirless Communication Technologies </h5></li>
+         <li> Coalition of 6G and Blockchain in AR/VR Space</li>
+         <li> Cognitive and Software-Defined Radio</li>
+         <li> Blockchain and Distributed Ledger</li>
+         <li> AI-empowered Quantum Communication</li>
+         <li> AI/ML/DL driven 5G/6G Communication</li>
+         <li> VR/AR Streaming</li>
+         <li> AI-driven Ubiquitous Networks</li>
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
+ <!---
         <li> Cryptology </li>
 		<li> Network Security</li>
 		<li> Cyber Security</li>
