--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -883,7 +883,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
       The conference invites original contributions in the fields of <b><u><!---Cryptography, Network Security and Blockchain technolog --></u></b>, but not limited to, the following list:
       </div>
     </div>
-    <ul class="nospace group btmspace-80">
+   <!-- <ul class="nospace group btmspace-80">
       <li class="one_third first">
         <blockquote>
         <h5>Track I: Next-Generation Wirless Communication Technologies </h5></li>
@@ -902,7 +902,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
          &nbsp;<br/>
         </ul>
         
-        </blockquote>
+        </blockquote>-->
       <!--  <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">A. Doe</h6>
