--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -942,18 +942,18 @@ All papers that conform to submission guidelines will be evaluated based on orig
 		  <li>Performance Analysis and Optimization</li>
          
          </ul>
--->
+
         
-        </blockquote>
+        </blockquote> -->
         <!-- <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">B. Doe</h6>
             <em>Director / Company Name</em></figcaption>
-        </figure> -->
+        </figure> 
       </li>
       <li class="one_third">
         <blockquote>
-          <h5>Track III: <!---Blockchain Technology And Its Applications -->  </h5>
+          <h5>Track III: Blockchain Technology And Its Applications   </h5> -->
          <!--- <ul>
           <li> Blockchain in the Internet of Things (IoT) </li>
           <li> Blockchain in Cyber Physical Systems </li>
