--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -883,11 +883,11 @@ All papers that conform to submission guidelines will be evaluated based on orig
       The conference invites original contributions in the fields of <b><u><!---Cryptography, Network Security and Blockchain technolog --></u></b>, but not limited to, the following list:
       </div>
     </div>
-   <!-- <ul class="nospace group btmspace-80">
+    <ul class="nospace group btmspace-80">
       <li class="one_third first">
         <blockquote>
         <h5>Track I: Next-Generation Wirless Communication Technologies </h5></li>
-         <li> Coalition of 6G and Blockchain in AR/VR Space</li>
+      <!--   <li> Coalition of 6G and Blockchain in AR/VR Space</li>
          <li> Cognitive and Software-Defined Radio</li>
          <li> Blockchain and Distributed Ledger</li>
          <li> AI-empowered Quantum Communication</li>
@@ -900,9 +900,10 @@ All papers that conform to submission guidelines will be evaluated based on orig
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
+	</blockquote>
         </ul>
         
-        </blockquote>-->
+       
       <!--  <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">A. Doe</h6>
