--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -887,14 +887,14 @@ All papers that conform to submission guidelines will be evaluated based on orig
       <li class="one_third first">
         <blockquote>
         <h5>Track I: Next-Generation Wirless Communication Technologies: </h5></li>
-      < <li> Coalition of 6G and Blockchain in AR/VR Space</li>
+        <li> Coalition of 6G and Blockchain in AR/VR Space</li>
          <li> Cognitive and Software-Defined Radio</li>
          <li> Blockchain and Distributed Ledger</li>
          <li> AI-empowered Quantum Communication</li>
          <li> AI/ML/DL driven 5G/6G Communication</li>
          <li> VR/AR Streaming</li>
          <li> AI-driven Ubiquitous Networks</li>
-        <!-- &nbsp;<br/>
+         &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
@@ -902,7 +902,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
          &nbsp;<br/>
 	</blockquote>
         </ul>
-        
+        <!--
        
       <!--  <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
