--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -885,7 +885,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
     </div>
     <ul class="nospace group btmspace-80">
       <li class="one_third first">
-        <blockquote>
+       <!-- <blockquote>-->
         <h5>Track I: Next-Generation Wirless Communication Technologies: </h5></li>
         <li> Coalition of 6G and Blockchain in AR/VR Space</li>
          <li> Cognitive and Software-Defined Radio</li>
@@ -900,7 +900,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
          &nbsp;<br/>
          &nbsp;<br/>
          &nbsp;<br/>
-	</blockquote>
+	<!---</blockquote>-->
         </ul>
         <!--
        
