--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -946,7 +946,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
 
         
         </blockquote> -->
-        <!-- <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
+         <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">B. Doe</h6>
             <em>Director / Company Name</em></figcaption>
@@ -978,7 +978,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
 			<li>Blockchain and Cryptocurrency  </li>
           
           </ul>
-  -->
+  
         </blockquote>
        <!--- <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
