--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -909,7 +909,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
             <h6 class="heading">A. Doe</h6>
             <em>CEO / Company Name</em></figcaption>
         </figure> -->
-<!---
+
     <ul>
       <li class="one_third">
         <blockquote>
@@ -945,12 +945,12 @@ All papers that conform to submission guidelines will be evaluated based on orig
          </ul>
 
         
-        </blockquote> -->
-         <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
+        </blockquote> 
+         <!--- <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">B. Doe</h6>
             <em>Director / Company Name</em></figcaption>
-        </figure> 
+        </figure>--> 
       </li>
       <li class="one_third">
         <blockquote>
