--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -950,6 +950,24 @@ All papers that conform to submission guidelines will be evaluated based on orig
   
         </blockquote>
       </li>
+
+   <li class="one_third">
+        <blockquote>
+          <h5>Track IV: Blockchain Technology And Its Applications   </h5> -->
+          <ul>
+          <li> Blockchain in the Internet of Things (IoT) </li>
+          <li> Blockchain in Cyber Physical Systems </li>
+          <li> Blockchain in Social Networking </li>
+          <li> Blockchain in Supply Chain Management </li>
+          <li> Cryptocurrency </li>
+
+          </ul>
+ 
+        </blockquote>
+      </li>
+
+	    
+    </ul>
        <!--- <figure class="clear"><img class="circle" src="images/demo/60x60.png" alt="">
           <figcaption>
             <h6 class="heading">C. Doe</h6>
