--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -884,7 +884,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
       </div>
     </div>
     <ul class="nospace group btmspace-80">
-      <li class="one_third first">
+      <li class="one_half first">
        <blockquote>
         <h5>Track I: Next-Generation Wirless Communication Technologies: </h5>
        <ul>
@@ -913,7 +913,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
         </figure> -->
 
     
-      <li class="one_third">
+      <li class="one_half">
         <blockquote>
         <h5>Track II: Advanced Computing and Communication System Security: </h5>
         <ul>
@@ -935,7 +935,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
             <em>Director / Company Name</em></figcaption>
         </figure>--> 
       
-      <li class="one_third">
+      <li class="one_half first ">
         <blockquote>
           <h5>Track III: Blockchain Technology And Its Applications   </h5> -->
           <ul>
@@ -951,7 +951,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
         </blockquote>
       </li>
 
-   <li class="one_third">
+   <li class="one_half">
         <blockquote>
           <h5>Track IV: Blockchain Technology And Its Applications   </h5> -->
           <ul>
