--- a/DISCOM2024/index.html
+++ b/DISCOM2024/index.html
@@ -920,6 +920,7 @@ All papers that conform to submission guidelines will be evaluated based on orig
            <li>Edge and Fog level Computing for Data Security</li>
            <li>Social Network Security
            &nbsp;<br/>
+	   &nbsp;<br/>
 	</ul>
        </blockquote> 
      </li>
