--- a/eminence/index.html
+++ b/eminence/index.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap -->
   <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Themefisher Font -->  
-  <link href="plugins/themefisher-font/style.css" rel="stylesheet">
+<link href="plugins/themefisher-font/style.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link href="plugins/font-awsome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Magnific Popup -->
@@ -454,7 +454,7 @@
 							<p>Due to limited seats, registration is FCFS. All attendees will get participation certificate. There is a nominal registration fee of Rs. 100 only. Registration deadline: Nov 10, 2024.</p>
 							
 							<br/>
-							<p>EMINENCE '24 Brochure: <a href="#">Download</a></p>
+							<p>EMINENCE '24 Brochure: <a href="docs/brochureEminence24.pdf">Download</a></p>
 							<p>Register through this Google Form: <a href="https://forms.gle/scdrPbRsj4FnnRzAA">Link</a></p>
 						</div>
 					</div>
