--- a/eminence/eminence24.html
+++ b/eminence/eminence24.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EMINENCE 26</title>
+  <title>EMINENCE 24</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -93,7 +93,7 @@
 					<h2 style="color: orangered;">EMINENCE</h2>
 					<h3 style="color: white;">A SPRINT OF EMINENT TALKS</h3>
 					<div class="timer"></div>
-					<h5 style="color: yellow;">31 Jan 2026, Sat, IETE Kolkata Center</h5>
+					<h5 style="color: yellow;">16 November 2024, IETE Kolkata Center, Kolkata</h5>
 					<!-- Action Button -->
 					<a href="#sectionRegister" class="btn btn-white-md">Register now!</a>
 				</div>
@@ -118,10 +118,10 @@
 			</div>
 			<div class="col-lg-8 col-md-6 align-self-center">
 				<div class="content-block">
-					<h2>About <span class="alternate">EMINENCE '26</span></h2>
+					<h2>About <span class="alternate">EMINENCE '24</span></h2>
 					<div class="description-one">
 						<p>
-							Eminence is hosted by IETE Kolkata Center in technical collaboration with ACM Kolkata Chapter, CSI Kolkata Chapter, ISTE WB Section. It is a half day event spanning highly reputed speakers from Industry, Research and Academia. Past Eminence: <a href="eminence24.html">Link</a>
+							Eminence is hosted by IETE Kolkata Center in technical collaboration with ACM Kolkata Chapter, CSI Kolkata Chapter, ISTE WB Section. It is a half day event spanning highly reputed speakers from Industry, Research and Academia.
 						</div>
 					<div class="description-two">
 						<p>
@@ -155,97 +155,95 @@
 					<h3><span class="alternate">Speakers</span></h3>(Alphabetical order - Tentative)
 				</div>
 			</div>
-		
-
+		</div>
+		<div class="row">
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<!-- Speaker 2 -->
+				<div class="speaker-item">
+					<div class="image">
+						<img src="images/speakers/angshuman.jpeg" alt="speaker" class="img-fluid">
+						<div class="primary-overlay"></div>
+						<div class="socials">
+							<ul class="list-inline">
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/https://www.linkedin.com/in/angshuman-ray-6b561670"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.ericsson.com/en"><i class="fa fa-address-card"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="content text-center">
+						<h5>Angshuman Ray</h5>
+						<p>Sr. Solution Architect, Ericsson</p>
+					</div>
+				</div>
+			</div>
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<!-- Speaker 8 -->
+				<!-- Speaker 6 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/abhijat.jpeg" alt="speaker" class="img-fluid">
+						<img src="images/speakers/dipti.png" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://in.linkedin.com/in/abhijat-vichare-8288222"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://nptel.ac.in/courses/128106013"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://india.acm.org/education/learning/esp/abhijat-vichare"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://india.acm.org"><i class="fa fa-address-card"></i></a></li>
-							</ul>
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/dipti-prasad-mukherjee-4b6344257"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://scholar.google.com/citations?hl=en&user=lJbcSBUAAAAJ"><i class="fa fa-graduation-cap"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.isical.ac.in/~dipti"><i class="fa fa-globe"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.isical.ac.in/content/computer-comm-sciences"><i class="fa fa-address-card"></i></a></li>
+								</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>Abhijat Vichare</h5>
-						<p>ACM-IN ESP & CEO, ACM India</p>
+						<h5>D P Mukherjee</h5>
+						<p>Prof &amp; Deputy Director, ISI</p>
 					</div>
 				</div>
 			</div>
 
-	<div class="col-lg-3 col-md-4 col-sm-6">
-				<!-- Speaker 8 -->
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<!-- Speaker 5 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/malay.jpg" alt="speaker" class="img-fluid">
+						<img src="images/speakers/ranjan.jpg" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://in.linkedin.com/in/malay-bhattacharyya-28216395"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=-emvWI8AAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://www.researchgate.net/profile/Malay-Bhattacharyya-3e"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://www.isical.ac.in/~malaybhattacharyya/"><i class="fa fa-address-card"></i></a></li>
-							</ul>
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/ranjan-dasgupta-b1900953"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://scholar.google.co.in/citations?user=63ds8_oAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.facebook.com/AssociationForComputingMachinery/photos/a.450674248151/10153489294718152/?type=3&_rdr"><i class="fa fa-globe"></i></a></li>
+								<li class="list-inline-item"><a href="https://ieeexplore.ieee.org/author/37684013900"><i class="fa fa-address-card"></i></a></li>
+						</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>Malay Bhattacharya</h5>
-						<p>Associate Prof, ISI Kolkata</p>
+						<h5>Ranjan Dasgupta</h5>
+						<p>Principal Scientist, TCS Research</p>
 					</div>
 				</div>
 			</div>
-
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<!-- Speaker 2 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/mehdi.png" alt="speaker" class="img-fluid">
+						<img src="images/speakers/sachinLodha.jpeg" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://www.linkedin.com/in/mehdi-bahrami-cs"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=xAGN8vcAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://speakers.acm.org/speakers/bahrami_20913"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://cloudlab.ucmerced.edu/~mehdi-bahrami"><i class="fa fa-address-card"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/sachin-lodha-8ba2991"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=GHuTFgwAAAAJ&hl=en&oi=ao"><i class="fa fa-graduation-cap"></i></a></li>
+								<li class="list-inline-item"><a href="https://india.acm.org/education/learning/esp/sachin-lodha"><i class="fa fa-globe"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.tcs.com/what-we-do/research"><i class="fa fa-address-card"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>Mehdi Bahrami</h5>
-						<p>ACM DSP &amp; Fujitsu Research, USA</p>
+						<h5>Sachin Lodha</h5>
+						<p>Head, TCS Research</p>
 					</div>
 				</div>
 			</div>
-
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<!-- Speaker 2 -->
-				<div class="speaker-item">
-					<div class="image">
-						<img src="images/speakers/agneeswaran.jpg" alt="speaker" class="img-fluid">
-						<div class="primary-overlay"></div>
-						<div class="socials">
-							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://in.linkedin.com/in/avijaysrinivas"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=h82IBpYAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://india.acm.org/education/learning/esp/vijay-srinivas-agneeswaran"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://a-vijaysrinivas.medium.com"><i class="fa fa-address-card"></i></a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="content text-center">
-						<h5>V S Agneeswaran</h5>
-						<p>ACM-IN ESP &amp; Sr. Director, Microsoft</p>
-					</div>
-				</div>
-			</div>
+			
 	
 
 
@@ -326,9 +324,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">ACM Distinguished Speaker</div>
-								  <div class="speaker">Mehdi Bahrami</div>
-								  <div class="venue">Bias in LLMs</div>
+									<div class="subject">ACM India Eminent Speaker</div>
+								  <div class="speaker">Sachin Lodha</div>
+								  <div class="venue">Fun with Algo</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -341,9 +339,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">ACM India Eminent Speaker</div>
-								  <div class="speaker">Abhijat Vichare</div>
-								  <div class="venue">Mathematics in CS</div>
+									<div class="subject">Research Speech</div>
+								  <div class="speaker">Ranjan Dasgupta</div>
+								  <div class="venue">Future of Robotics</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -356,9 +354,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">Deep Tech Speech</div>
-								  <div class="speaker">Malay Bhattacharya</div>
-								  <div class="venue">Fundamentals of ML</div>
+									<div class="subject">Academic Speech</div>
+								  <div class="speaker">D P Mukherjee</div>
+								  <div class="venue">Future of ML</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -371,9 +369,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">ACM India Eminent Speaker</div>
-								  <div class="speaker">V S Agneeswaran</div>
-								  <div class="venue">Computer Vision</div>
+									<div class="subject">Industry Speech</div>
+								  <div class="speaker">Anghusman Ray</div>
+								  <div class="venue">Future of IT</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -453,11 +451,11 @@
 							<h5>A Sprint of Eminent Talks</h5>
 							<br/>
 							<p><u>Guidelines</u></p>
-							<p>Due to limited seats, registration is FCFS. All attendees will get participation certificate. There is a nominal registration fee of Rs. 100 only. Registration deadline: Jan 15, 2026.</p>
+							<p>Due to limited seats, registration is FCFS. All attendees will get participation certificate. There is a nominal registration fee of Rs. 100 only. Registration deadline: Nov 10, 2024.</p>
 							
 							<br/>
-							<p>EMINENCE '26 Brochure: <a href="docs/brochureEminence26.pdf">Download</a></p>
-							<p>Register through this Google Form: <a href="https://forms.gle/X7xREw8EwxdE9gwF9">Link</a></p>
+							<p>EMINENCE '24 Brochure: <a href="docs/brochureEminence24.pdf">Download</a></p>
+							<p>Register through this Google Form: <a href="https://forms.gle/scdrPbRsj4FnnRzAA">Link</a></p>
 						</div>
 					</div>
 				</div>
@@ -548,7 +546,7 @@
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p>&#169; 2026 <a href="http://www.ietekolkata.in">IETE K-C</a> &nbsp;&nbsp;<a href="https://snehasisb.github.io">@ Snehasis Banerjee</a></p>
+          <p>&#169; 2024 <a href="http://www.ietekolkata.in">IETE K-C</a> &nbsp;&nbsp;<a href="https://snehasisb.github.io">@ Snehasis Banerjee</a></p>
         </div>
       </div>
       <div class="col-md-6">
