--- a/eminence/index.html
+++ b/eminence/index.html
@@ -184,20 +184,18 @@
 				<!-- Speaker 8 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/malay.jpg" alt="speaker" class="img-fluid">
+						<img src="images/speakers/indranil.jpeg" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://in.linkedin.com/in/malay-bhattacharyya-28216395"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=-emvWI8AAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://www.researchgate.net/profile/Malay-Bhattacharyya-3e"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://www.isical.ac.in/~malaybhattacharyya/"><i class="fa fa-address-card"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/indranil-mitra"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.pwc.in/research-and-insights-hub/immersive-outlook-9/viewpoint.html"><i class="fa fa-address-card"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>Malay Bhattacharya</h5>
-						<p>Associate Prof, ISI Kolkata</p>
+						<h5>Indranil Mitra</h5>
+						<p>Partner, PWC</p>
 					</div>
 				</div>
 			</div>
@@ -207,20 +205,20 @@
 				<!-- Speaker 2 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/mehdi.png" alt="speaker" class="img-fluid">
+						<img src="images/speakers/sirish.png" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://www.linkedin.com/in/mehdi-bahrami-cs"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=xAGN8vcAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://speakers.acm.org/speakers/bahrami_20913"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://cloudlab.ucmerced.edu/~mehdi-bahrami"><i class="fa fa-address-card"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.researchgate.net/profile/Sarvottamananda-Swami"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.agilekolkata.com/2022/speakers/swami-sarvottamananda/#"><i class="fa fa-graduation-cap"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.youtube.com/watch?v=8rlBZA8-JlM"><i class="fa fa-globe"></i></a></li>
+								<li class="list-inline-item"><a href="https://rkmvu.ac.in/vice-chancellor/"><i class="fa fa-address-card"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>Mehdi Bahrami</h5>
-						<p>ACM DSP &amp; Fujitsu Research, USA</p>
+						<h5>Shreesh Maharaj</h5>
+						<p>VC, Ramakrishna Mission, Belur</p>
 					</div>
 				</div>
 			</div>
@@ -229,20 +227,20 @@
 				<!-- Speaker 2 -->
 				<div class="speaker-item">
 					<div class="image">
-						<img src="images/speakers/agneeswaran.jpg" alt="speaker" class="img-fluid">
+						<img src="images/speakers/s_saha.jpg" alt="speaker" class="img-fluid">
 						<div class="primary-overlay"></div>
 						<div class="socials">
 							<ul class="list-inline">
-								<li class="list-inline-item"><a href="https://in.linkedin.com/in/avijaysrinivas"><i class="fa fa-linkedin"></i></a></li>
-								<li class="list-inline-item"><a href="https://scholar.google.com/citations?user=h82IBpYAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
-								<li class="list-inline-item"><a href="https://india.acm.org/education/learning/esp/vijay-srinivas-agneeswaran"><i class="fa fa-globe"></i></a></li>
-								<li class="list-inline-item"><a href="https://a-vijaysrinivas.medium.com"><i class="fa fa-address-card"></i></a></li>
+								<li class="list-inline-item"><a href="https://in.linkedin.com/in/sriparna-saha-1a1338161"><i class="fa fa-linkedin"></i></a></li>
+								<li class="list-inline-item"><a href="https://scholar.google.co.in/citations?user=Fj7jA_AAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
+								<li class="list-inline-item"><a href="https://india.acm.org/education/learning/esp/sriparna-saha"><i class="fa fa-globe"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.iitp.ac.in/~sriparna"><i class="fa fa-address-card"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="content text-center">
-						<h5>V S Agneeswaran</h5>
-						<p>ACM-IN ESP &amp; Sr. Director, Microsoft</p>
+						<h5>Sriparna Saha</h5>
+						<p>ACM-IN ESP &amp; Asoc. Prof, IIT-P</p>
 					</div>
 				</div>
 			</div>
