--- a/eminence/index.html
+++ b/eminence/index.html
@@ -324,9 +324,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">ACM Distinguished Speaker</div>
-								  <div class="speaker">Mehdi Bahrami</div>
-								  <div class="venue">Bias in LLMs</div>
+									<div class="subject">ACM India Eminent Speaker</div>
+								  <div class="speaker">Sriparna Saha</div>
+								  <div class="venue">AI in Health</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -354,9 +354,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">Deep Tech Speech</div>
-								  <div class="speaker">Malay Bhattacharya</div>
-								  <div class="venue">Fundamentals of ML</div>
+									<div class="subject">Academic Speech</div>
+								  <div class="speaker">Shreesh Maharaj</div>
+								  <div class="venue">Future of CS</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -369,9 +369,9 @@
 									</div>
 									<!-- Speaker -->
 									<!-- Subject -->
-									<div class="subject">ACM India Eminent Speaker</div>
-								  <div class="speaker">V S Agneeswaran</div>
-								  <div class="venue">Computer Vision</div>
+									<div class="subject">Industry Speech</div>
+								  <div class="speaker">Indranil Mitra</div>
+								  <div class="venue">Future of AI</div>
 									<!-- Venue -->
 								</div>
 							</li>
@@ -451,11 +451,11 @@
 							<h5>A Sprint of Eminent Talks</h5>
 							<br/>
 							<p><u>Guidelines</u></p>
-							<p>Due to limited seats, registration is FCFS. All attendees will get participation certificate. There is a nominal registration fee of Rs. 100 only. Registration deadline: Jan 15, 2026.</p>
+							<p>Due to limited seats, registration is FCFS. All attendees will get participation certificate. There is a nominal registration fee of Rs. 118 only (100+GST). Registration deadline: Jan 27, 2026.</p>
 							
 							<br/>
 							<p>EMINENCE '26 Brochure: <a href="docs/brochureEminence26.pdf">Download</a></p>
-							<p>Register through this Google Form: <a href="https://forms.gle/X7xREw8EwxdE9gwF9">Link</a></p>
+							<p>Register through this Google Form: <a href="https://forms.gle/u9D5aDZuxrSJR5Hz8">Link</a></p>
 						</div>
 					</div>
 				</div>
