--- a/eminence/index.html
+++ b/eminence/index.html
@@ -175,7 +175,7 @@
 					</div>
 					<div class="content text-center">
 						<h5>Abhijat Vichare</h5>
-						<p>ACM-IN ESP & CEO, ACM India</p>
+						<p>ACM-IN ESP & OM, ACM India</p>
 					</div>
 				</div>
 			</div>
